--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -52,6 +52,12 @@ body {
   justify-content: space-evenly;
 }
 
+.header-scrollato{
+  z-index: 2;
+  background: black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .header .brand img {
   cursor: Pointer;
   width: 45px;
