--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -257,7 +257,6 @@ body {
   width: 100%;
   height: 100%;
   min-width: 300px;
-  min-height: 300px;
   max-height: 300px;
 
 }
@@ -454,6 +453,8 @@ body {
 
 /* FOOTER */
 .footer {
+  color:#fff;
+  text-align: center;
   flex: 0;
   bottom: 0;
   display: flex;
@@ -597,6 +598,9 @@ body {
   bottom: -1px;
 }
 
+.story-container .splide__arrows {
+  display: none;
+}
 .story-container .splide__pagination__page.is-active{
   background: #fff;
 }
@@ -806,6 +810,7 @@ body {
   }
 
   .footer {
+    color: #fff;
     flex-direction: column;
     justify-content: center;
     align-items: center;
