--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -20,10 +20,13 @@ body {
   scroll-behavior: smooth;
   height: 100%;
   width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: "Lexend";
   background-color: var(--colore-sfondo);
+  color:#fff;
 }
 
 * {
@@ -136,12 +139,10 @@ a {
 
 
 /* PRESENTATION */
-.presentation {
-  display: flex;
-}
 
 .presentation img {
   width: 100%;
+  max-height: 100%;
 }
 
 
@@ -514,18 +515,24 @@ a {
   text-align: center;
   flex: 0;
   bottom: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
   width: 100%;
-  height: 80px;
   background-image: var(--colore-features);
 }
-
+.social-footer {
+  min-width: 130px;
+  display: flex;
+  justify-content: space-between;
+}
 .mini-section {
   display: flex;
   flex-direction: column;
+}
+.text-white {
+  color:#fff;
+}
+
+.max-width-760 {
+  max-width: 960px !important;
 }
 
 .footer button:hover {
@@ -556,6 +563,10 @@ a {
   flex-direction: row;
 }
 
+.footer-divider {
+  max-width:60px;
+  margin:0 auto;
+}
 
 
 .icons-footer img {
