--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -18,7 +18,6 @@
 html,
 body {
   scroll-behavior: smooth;
-  height: 100%;
   width: 100%;
   max-width: 100vw;
   overflow-x: hidden;
@@ -78,9 +77,9 @@ a {
 }
 
 .header-scrolled{
-  z-index: 2;
-  background: #000000d6;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  z-index: 2 !important;
+  background: #000000d6 !important;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
 }
 
 .header .brand img {
@@ -672,7 +671,7 @@ a {
 }
 
 .story-container .splide__arrows {
-  display: none;
+  /* STYLE DELLE FRECCE SU COMICSTORY */
 }
 .story-container .splide__pagination__page.is-active{
   background: #fff;
