--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -2209,17 +2209,24 @@ a {
 }
 
 .story-container img{
-  height: 400px;
-  width: 280px;
+  width: 380px;
 }
 
 .story-container .splide__arrow svg{fill: #fff;}
 
-.story-container .splide__arrow:hover:not(:disabled) svg{fill: #ffff;}
-.story-container .splide{
-  max-width: 400px;
+.story-container .splide__arrow:hover:not(:disabled) svg
+{
+  fill: #ffff;
 }
 
+.story-container .splide{
+  padding-bottom: 70px !important;
+}
+@media (max-width: 760px) {
+  .splide {
+    padding: 0.1rem !important;
+  }
+}
 
 .story-container .splide__arrow--prev{
   top: unset;
@@ -2236,8 +2243,10 @@ a {
 
 
 .story-container .panels .right-p{
-  width: 400px;
-  
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
   
 }
 
@@ -2273,8 +2282,6 @@ a {
     flex-direction: column;
     align-items: center;
     text-align: center !important;
-    margin-left: 20px;
-    margin-right: 20px;
   }
 
   .story-container .panels .text-normal{
